# FOORT

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md
Benchmarking/Seppe/: r_phi_bound_geodesic.txt  test_plot.ipynb
FOORT/: BS.cfg  BS_zoom_out.cfg  CMakeLists.txt  Config.cpp  Config.h  ConfigReader.cpp  Diagnostics.cpp  Diagnostics.h  Diagnostics_Emission.cpp  Diagnostics_Emission.h  Geodesic.h  Integrators.cpp  Integrators.h  Main.cpp  Metric.cpp  Metric.h  Terminations.cpp  Terminations.h  Utilities.h  ViewScreen.cpp  ViewScreen.h  eff_BS.cfg  lowres_BH.cfg  lowres_BS.cfg  spline.h  test_kerr
FOORT/cfgs/: BosonStar.cfg  zoom_BS.cfg
FOORT/old_makes/: makefile_mac
FOORT/src/: CMakeLists.txt  Config.cpp  ConfigReader.h  Diagnostics.cpp  Diagnostics.h  DiagnosticsEmission.cpp  Geodesic.cpp  Geometry.h  InputOutput.cpp  InputOutput.h  Main.cpp  Mesh.cpp  Mesh.h  Metric.cpp  Metric.h  Spline.cpp  Spline.h  Terminations.h  Utilities.cpp  ViewScreen.h
FOORT/test/: CMakeLists.txt  old_cmakelists.txt  old_test_kerr.cpp  test_integrator.cpp  test_kerr.cpp
alternative_builds/: MacOS_workaround.sh
docs/html/: _config_8cpp.html  _config_8h.html  _config_8h_source.html  _config_reader_8cpp.html  _config_reader_8h.html  _config_reader_8h_source.html  _diagnostics_8cpp.html  _diagnostics_8h.html  _diagnostics_8h_source.html  _diagnostics_emission_8cpp.html  _diagnostics_emission_8h.html  _diagnostics_emission_8h_source.html  _geodesic_8cpp.html  _geodesic_8h.html  _geodesic_8h_source.html  _geometry_8h.html  _geometry_8h_source.html  _header_8h.html  _header_8h_source.html  _input_output_8cpp.html  _input_output_8h.html  _input_output_8h_source.html  _integrators_8cpp.html  _integrators_8h.html  _integrators_8h_source.html  _main_8cpp.html  _mesh_8cpp.html  _mesh_8h.html  _mesh_8h_source.html  _metric_8cpp.html  _metric_8h.html  _metric_8h_source.html  _spline_8h.html  _spline_8h_source.html  _terminations_8cpp.html  _terminations_8h.html  _terminations_8h_source.html  _utilities_8cpp.html  _utilities_8h.html  _utilities_8h_source.html  (+190 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+74 more)
